argocd/tube-archivist/manifests/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tube-archivist
  labels:
    app: tube-archivist
spec:
  replicas: 1
  serviceName: tube-archivist
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: tube-archivist
  template:
    metadata:
      labels:
        app: tube-archivist
    spec:
      containers:
        - name: tube-archivist
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
          image: docker.io/bbilly1/tubearchivist:v0.5.7@sha256:20ce26849d0bf00db9d85300f8205af24d4cd507dd7ab53b55d48a33544ce5b6
          volumeMounts:
            - mountPath: /youtube
              name: youtube
            - mountPath: /cache
              name: cache
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: youtube
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: nfs-storage
        resources:
          requests:
            storage: 100Gi
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: cache
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: nfs-storage
        resources:
          requests:
            storage: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  serviceName: elasticsearch
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9200
              protocol: TCP
          image: docker.io/bbilly1/tubearchivist-es@sha256:58007d1cf7a3b9f3ae4a8e0d2798b05d9c7dd768877b1fe908fd4142da4c68b6
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: es
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: es
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: nfs-storage
        resources:
          requests:
            storage: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ta-redis
  labels:
    app: ta-redis
spec:
  replicas: 1
  serviceName: ta-redis
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ta-redis
  template:
    metadata:
      labels:
        app: ta-redis
    securityContext:
      fsGroup: 999
      fsGroupChangePolicy: OnRootMismatch
    spec:
      containers:
        - name: ta-redis
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              protocol: TCP
          image: docker.io/redis:8.2-alpine3.22@sha256:987c376c727652f99625c7d205a1cba3cb2c53b92b0b62aade2bd48ee1593232
          volumeMounts:
            - mountPath: /data
              name: data
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
