argocd/tube-archivist/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tube-archivist
  name: tube-archivist
spec:
  ports:
    - name: "http"
      port: 8000
      targetPort: 8000
  selector:
    app: tube-archivist
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch
spec:
  ports:
    - name: "tcp"
      port: 9200
      targetPort: 9200
  selector:
    app: elasticsearch
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
spec:
  ports:
    - name: "tcp"
      port: 6379
      targetPort: 6379
  selector:
    app: redis
