argocd/tube-archivist/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  # annotations:
  #   gethomepage.dev/enabled: 'true'
  #   gethomepage.dev/name: chartdb
  #   gethomepage.dev/icon: chartdb
  #   gethomepage.dev/description: 'chartdb is the inventory and organization system built for the Home User!'
  #   gethomepage.dev/pod-selector: app=chartdb
  labels:
    app: tubearchivist
  name: tubearchivist
spec:
  parentRefs:
  - name: cilium-private-gateway
    namespace: cilium
    sectionName: https
  hostnames:
  - ta.yanello.net
  rules:
  - backendRefs:
    - name: tube-archivist
      port: 8000
